--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Dashan Richards 
-logo: 
+logo: assets/green_shirt_smile.jpeg
 description: Detail-oriented and highly organized team player with 1+ year of Fintech experience as a Data Analyst. Proven expertise in Python, SQL, AWS, and advanced Machine Learning and Deep Learning algorithms, backed by a strong track record of successful cross-domain projects. Eager to contribute analytical excellence to your team.
 show_downloads: true
 theme: jekyll-theme-minimal
